--- a/fbtest.html
+++ b/fbtest.html
@@ -14,9 +14,9 @@
 
   var db = firebase.database().ref("temperature");
    var stuff;
- db.on("value",function(result){
+db.on("value",function(result){
        info = result.val()
-table = '<table><tr><th>Celcius </th><th>Farenheight </th></tr>';
+table = '<style>table, th, td {border: 1px solid black;}</style><table><tr><th>farenheight </th><th>celcius </th></tr>';
        for(var key in info){
     const splitTemp = info[key].temp.split(',');
 table = table + '<tr><td>'+splitTemp.join('</td><td>')+'</tr>';
