--- a/fbtest.html
+++ b/fbtest.html
@@ -16,7 +16,7 @@
    var stuff;
 db.on("value",function(result){
        info = result.val()
-table = '<style>table, th, td {border: 1px solid black;}</style><table><tr><th>farenheight </th><th>celcius </th></tr>';
+table = '<style>table, th, td {border: 1px solid black;}</style><table><tr><th>Celsius </th><th>Fahrenheit </th></tr>';
        for(var key in info){
     const splitTemp = info[key].temp.split(',');
 table = table + '<tr><td>'+splitTemp.join('</td><td>')+'</tr>';
