--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     messagingSenderId: "308725239159"
   };
   firebase.initializeApp(config);
-
   var db = firebase.database().ref("temperature");
    var stuff;
-  db.on("value",function(result){
+db.on("value",function(result){
        info = result.val()
-	   for(var key in info){
-			document.write(info[key].temp + "<br>")
-	   }
+table = '<style>table, th, td {border: 1px solid black;}</style><table><tr><th>Celsius </th><th>Fahrenheit </th></tr>';
+       for(var key in info){
+    const splitTemp = info[key].temp.split(',');
+table = table + '<tr><td>'+splitTemp.join('</td><td>')+'</tr>';
+       }
+table = table+ '</table>';
+document.write(table);
   })
-
 </script>
 
 
