--- a/fbtest.html
+++ b/fbtest.html
@@ -14,8 +14,8 @@
 
   var db = firebase.database.ref("temperature");
    var stuff;
-db.on("value",function(result).limitToFirst(5){
-       info = result.val()
+db.on("value",function(result){
+       info = result.val().limitToFirst(5)
 table = '<style>table, th, td {border: 1px solid black;}</style><table><tr><th>Celsius </th><th>Fahrenheit </th></tr>';
        for(var key in info){
     const splitTemp = info[key].temp.split(',');
